--- a/#src/templates/theme/pages/about.html
+++ b/#src/templates/theme/pages/about.html
@@ -14,17 +14,17 @@
   <div class="hero">
     <div class="hero__container">
       <img src="{% static 'theme/mb/images/about-hero.png' %}" alt="О компании Акрополь" title="О компании Акрополь"
-        class="hero__image" />
+           class="hero__image"/>
       <div class="hero__inner">
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
           <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
-            class="breadcrumbs__item">
+             class="breadcrumbs__item">
             Главная
-            <meta itemprop="position" content="1" />
+            <meta itemprop="position" content="1"/>
           </a>
           <span itemprop="name" class="breadcrumbs__item">
             О нас
-            <meta itemprop="position" content="2" />
+            <meta itemprop="position" content="2"/>
           </span>
         </div>
         <h1 class="hero__title">
@@ -38,8 +38,9 @@
         </p>
         <div class="hero__buttons">
           <button type="button" class="hero__button hero__button--blue" data-popup="consultation-form"
-            data-order="По услугам">Получить
-            консультацию</button>
+                  data-order="По услугам">Получить
+            консультацию
+          </button>
           <!-- <button type="button" class="hero__button hero__button--small">?</button> -->
         </div>
       </div>
@@ -78,7 +79,7 @@
       <div class="service-content__inner">
         <div class="service-content__row">
           <div class="service-content__col">
-            <img src="{% static 'theme/mb/images/about-3.png' %}" alt="О нашей компании" title="О нашей компании" />
+            <img src="{% static 'theme/mb/images/about-3.png' %}" alt="О нашей компании" title="О нашей компании"/>
           </div>
           <div class="service-content__col">
             <div class="service-content__text _text">
@@ -106,7 +107,8 @@
               <p><i>Сохраните достойную память о близких и любимых в граните - выбирайте компанию "Акрополь"!</i></p>
             </div>
             <button class="service-content__btn _btn" data-popup="order-service" data-order="Заказать памятник">Заказать
-              памятник</button>
+              памятник
+            </button>
           </div>
         </div>
       </div>
@@ -116,3 +118,11 @@
   {% include "../components/map.html" %}
 </main>
 {% endblock %}
+
+
+
+
+
+
+
+
