--- a/main/core/theme/mb/templates/pages/service/service_grav.html
+++ b/main/core/theme/mb/templates/pages/service/service_grav.html
@@ -20,12 +20,12 @@
            title="Гравировка на памятнике Томск" class="hero__image-grav"/>
       <div class="hero__inner">
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-          <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
+          <a href="/" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
              class="breadcrumbs__item">
             Главная
             <meta itemprop="position" content="1"/>
           </a>
-          <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
+          <a href="{% url 'service' %}" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
              class="breadcrumbs__item">
             Услуги
             <meta itemprop="position" content="2"/>
@@ -104,6 +104,7 @@
             Гарантия качества: убедитесь, что компания предоставляет гарантию на выполненные работы
           </li>
         </ol>
+        <br>
         <p>
           Примеры портретов на памятниках можно найти на нашем сайте в разделе "<a
           href="https://xn----7sbbi3adkojmfupe8q.xn--p1ai/gallery/">Наши работы</a>". Также можно обратиться к
@@ -165,6 +166,7 @@
                 <p>
                   <strong>Процесс создания портретной плитки:</strong>
                 </p>
+                <br>
                 <ol>
                   <li><strong>Подготовка поверхности:</strong> Плитка тщательно очищается и полируется</li>
                   <li><strong>Нанесение рисунка:</strong> С помощью специального оборудования рисунок наносится на
@@ -214,7 +216,7 @@
             <div class="service-content__text _text">
               <div class="hidden_content">
                 <p>
-                  это тонкий слой чистого золота, который используется для декорирования памятников, надгробий и других
+                  Это тонкий слой чистого золота, который используется для декорирования памятников, надгробий и других
                   мемориальных изделий. Оно придаёт изделиям роскошный и благородный вид, символизируя вечную память и
                   уважение
                 </p>
@@ -243,6 +245,7 @@
                 <p>
                   <strong>Примеры работ с сусальным золотом:</strong>
                 </p>
+                <br>
                 <ol>
                   <li>
                     <strong>Памятные надписи:</strong> Золотые буквы на памятнике создают ощущение значимости
@@ -260,6 +263,7 @@
                 <p>
                   <strong>Процесс работы с сусальным золотом:</strong>
                 </p>
+                <br>
                 <ol>
                   <li>
                     <strong>Подготовка поверхности:</strong> Поверхность памятника тщательно очищается и шлифуется
