--- a/main/core/theme/mb/templates/pages/service/service.html
+++ b/main/core/theme/mb/templates/pages/service/service.html
@@ -20,7 +20,7 @@
         title="Мемориальные услуги компании Акрополь" class="hero__image" />
       <div class="hero__inner">
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-          <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
+          <a href="/" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
             class="breadcrumbs__item">
             Главная
             <meta itemprop="position" content="1" />
