--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -14,7 +14,8 @@
 
   // .main__top
 
-  &__top {}
+  &__top {
+  }
 
   // .main__bg
 
@@ -31,7 +32,8 @@
 
   // .main__content
 
-  &__content {}
+  &__content {
+  }
 }
 
 .top-main {
@@ -46,7 +48,6 @@
     align-items: center;
     justify-content: space-between;
   }
-
 
 
   // .top-main__left
@@ -189,7 +190,7 @@
 
   //.content-main__subtitle
 
-  &__subtitle{
+  &__subtitle {
     font-size: 25px;
     color: #ffffff;
     margin-top: 40px;
@@ -226,7 +227,8 @@
 
   // .index-stock__container
 
-  &__container {}
+  &__container {
+  }
 
   // .index-stock__grid
 
@@ -284,7 +286,7 @@
         font-weight: 700;
       }
 
-      .index-stock__item-img{
+      .index-stock__item-img {
         object-fit: none;
       }
     }
@@ -340,7 +342,8 @@
 
   // .index-catalog__container
 
-  &__container {}
+  &__container {
+  }
 
   // .index-catalog__title
 
@@ -410,7 +413,8 @@
 
   // .index-catalog__card
 
-  &__card {}
+  &__card {
+  }
 }
 
 .product-thumb__slider {
@@ -478,7 +482,7 @@
     font-size: 10px;
     line-height: 140%;
 
-    &+& {
+    & + & {
       margin-top: 10px;
     }
   }
@@ -526,7 +530,8 @@
 
   // .filter__body
 
-  &__body {}
+  &__body {
+  }
 
   // .filter__inner
 
@@ -559,7 +564,7 @@
   &__item {
     position: relative;
 
-    @media (hover:hover) {
+    @media (hover: hover) {
       &:hover {
         .filter__item-text {
           color: rgba($color: $accent, $alpha: 1.0);
@@ -570,7 +575,7 @@
         }
 
         .filter__sublist-link {
-          @media (hover:hover) {
+          @media (hover: hover) {
             &:hover {
               color: rgba($color: $accent, $alpha: 1.0);
             }
@@ -607,7 +612,8 @@
 
   // .filter__sublist-item
 
-  &__sublist-item {}
+  &__sublist-item {
+  }
 
   // .filter__sublist-link
 
@@ -627,7 +633,8 @@
 
   // .index-work__container
 
-  &__container {}
+  &__container {
+  }
 
   // .index-work__title
 
@@ -747,7 +754,8 @@
 
   // .index-work__wrapper
 
-  &__wrapper {}
+  &__wrapper {
+  }
 
   // .index-work__slide
 
@@ -799,7 +807,8 @@
 
   // .index-reviews__container
 
-  &__container {}
+  &__container {
+  }
 
   // .index-reviews__inner
 
@@ -877,7 +886,8 @@
 
   // .reviews__wrapper
 
-  &__wrapper {}
+  &__wrapper {
+  }
 
   // .reviews__slider
 
@@ -916,7 +926,8 @@
 
   // .index-contact__container
 
-  &__container {}
+  &__container {
+  }
 
   // .index-contact__grid
 
@@ -992,7 +1003,8 @@
 
   // .index-contact__list-icon
 
-  &__list-icon {}
+  &__list-icon {
+  }
 
   // .index-contact__list-text
 
@@ -1089,7 +1101,8 @@
 
   // .index-map__container
 
-  &__container {}
+  &__container {
+  }
 
   // .index-map__inner
   &__inner {
@@ -1132,7 +1145,7 @@
     }
   }
 
-  &__image-grav{
+  &__image-grav {
     position: absolute;
     right: 0;
     top: 50%;
@@ -1228,7 +1241,8 @@
 
   // .hero__button--blue
 
-  &__button--blue {}
+  &__button--blue {
+  }
 
   // .hero__button--small
 
@@ -1260,7 +1274,8 @@
       // background-color: rgba($color: $mainColor, $alpha: 1.0);
     }
 
-    @media (hover:hover) {
+
+    @media (hover: hover) {
       &:hover {
         border-radius: 5px 0px 0px 5px;
 
@@ -1270,6 +1285,31 @@
           pointer-events: all;
         }
       }
+    }
+
+    @media screen and (max-width: 425px) {
+      &::before {
+        position: relative;
+        top: 0;
+        left: 0;
+        opacity: 1;
+        pointer-events: all;
+        transform: translateX(0);
+        border: none;
+      }
+    }
+  }
+
+  &__button--border {
+    //width: 50px;
+    background-color: transparent;
+    border: 2px solid rgba($color: $accent, $alpha: 1.0);
+    color: rgba($color: $accent, $alpha: 1.0);
+    position: relative;
+    transition: 0.25s;
+
+
+    @media (hover: hover) {
     }
 
     @media screen and (max-width: 425px) {
@@ -1304,15 +1344,18 @@
 
   // .service__content
 
-  &__content {}
+  &__content {
+  }
 
   // .service__container
 
-  &__container {}
+  &__container {
+  }
 
   // .service__inner
 
-  &__inner {}
+  &__inner {
+  }
 
   // .service__text
 
@@ -1337,7 +1380,7 @@
       margin-left: 40px;
       margin-bottom: 20px;
 
-      li+li {
+      li + li {
         margin-top: 10px;
       }
     }
@@ -1349,7 +1392,8 @@
 
   // .service-advantge__container
 
-  &__container {}
+  &__container {
+  }
 
   // .service-advantge__grid
 
@@ -1397,20 +1441,24 @@
   background-color: rgba($color: $accent, $alpha: 1.0);
 }
 
-.swiper-pagination-bullet-active {}
+.swiper-pagination-bullet-active {
+}
 
-.swiper-pagination-bullet-active-main {}
+.swiper-pagination-bullet-active-main {
+}
 
 
 .index-service {
 
   // .index-service__container
 
-  &__container {}
+  &__container {
+  }
 
   // .index-service__title
 
-  &__title {}
+  &__title {
+  }
 
   // .index-service__cards
 
@@ -1476,7 +1524,7 @@
       backdrop-filter: blur(1px);
     }
 
-    @media (hover:hover) {
+    @media (hover: hover) {
       &:hover {
         img {
           transform: scale(1.01);
@@ -1563,7 +1611,8 @@
     }
 
     // .form__label
-    &__label {}
+    &__label {
+    }
 
     // .form__controls
     &__controls {
@@ -1583,21 +1632,22 @@
     }
   }
 
-  .login__images {}
+  .login__images {
+  }
 }
 
 .form__controls-textarea {
-    padding: 15px 20px;
-    border: 0.2px solid rgb(130, 130, 130);
-    border-radius: 4px;
-    font-size: 14px;
-    color: rgba($color: $mainColor, $alpha: .9);
-    resize: none;
+  padding: 15px 20px;
+  border: 0.2px solid rgb(130, 130, 130);
+  border-radius: 4px;
+  font-size: 14px;
+  color: rgba($color: $mainColor, $alpha: .9);
+  resize: none;
 
-    &:focus,
-    &:focus-visible,
-    &:focus-within {
-      outline: none;
-      border-color: rgba($color: $mainColor, $alpha: .4);
-    }
+  &:focus,
+  &:focus-visible,
+  &:focus-within {
+    outline: none;
+    border-color: rgba($color: $mainColor, $alpha: .4);
+  }
 }
