--- a/main/core/theme/mb/templates/pages/gallery.html
+++ b/main/core/theme/mb/templates/pages/gallery.html
@@ -39,8 +39,8 @@
         </p>
         <div class="hero__buttons">
           <a href="{% url 'category' %}" class="hero__button hero__button--blue">Посмотреть каталог</a>
-          <button type="button" class="hero__button hero__button--small" data-popup="consultation-form"
-            data-order="Услуги">?</button>
+          <button type="button" class="hero__button hero__button--border" data-popup="consultation-form"
+            data-order="Услуги">Заказать консультацию</button>
         </div>
       </div>
     </div>
