--- a/main/core/theme/mb/templates/pages/service/service_grav.html
+++ b/main/core/theme/mb/templates/pages/service/service_grav.html
@@ -45,10 +45,8 @@
         </p>
         <div class="hero__buttons">
           <button type="button" class="hero__button hero__button--blue" data-popup="order-service"
-                  data-order="Гравировка">Заказать услугу
-          </button>
-          <button type="button" class="hero__button hero__button--small" data-popup="consultation-form"
-                  data-order="Гравировка">?
+                  data-order="Гравировка">
+            Заказать консультацию
           </button>
         </div>
       </div>
