--- a/main/core/theme/mb/templates/pages/category-detail.html
+++ b/main/core/theme/mb/templates/pages/category-detail.html
@@ -11,7 +11,7 @@
 
 {% block description %}
 {% if category.meta_description %}
-  {{ meta_description }}
+  {{ category.meta_description }}
 {% else %}
 Фотографии памятников солдатам СВО. Консультация по телефону +7(900) 921-09-15, +7(903) 955-40-18
 {% endif %}
