--- a/#src/templates/admin/gallery/gallery_category_add.html
+++ b/#src/templates/admin/gallery/gallery_category_add.html
@@ -20,6 +20,18 @@
               {{ form.name }} {{ form.name.errors }}
             </div>
             <div class="form__group">
+              <label for="{{ form.slug.id_for_label }}" class="form__controls-label">SLUG :</label>
+              {{ form.slug }} {{ form.slug.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.home_view.id_for_label }}" class="form__controls-label">Отображать на главной :</label>
+              {{ form.home_view }} {{ form.home_view.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.image.id_for_label }}" class="form__controls-label">Картинка :</label>
+              {{ form.image }} {{ form.image.errors }}
+            </div>
+            <div class="form__group">
               <label for="{{ form.meta_h1.id_for_label }}" class="form__controls-label"> <span>*</span>Заголовок: </label>
               {{ form.meta_h1 }} {{ form.meta_h1.errors }}
             </div>
@@ -36,8 +48,8 @@
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.slug.id_for_label }}" class="form__controls-label">SLUG :</label>
-              {{ form.slug }} {{ form.slug.errors }}
+              <label for="{{ form.description.id_for_label }}" class="form__controls-label"> Текст на странице: </label>
+              {{ form.description }} {{ form.description.errors }}
             </div>
           </div>
         </div>
