--- a/#src/templates/admin/gallery/gallery_category_edit.html
+++ b/#src/templates/admin/gallery/gallery_category_edit.html
@@ -47,6 +47,10 @@
               <label for="{{ form.meta_keywords.id_for_label }}" class="form__controls-label"> <span>*</span>Ключевые слова: </label>
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
             </div>
+            <div class="form__group">
+              <label for="{{ form.description.id_for_label }}" class="form__controls-label"> Текст на странице: </label>
+              {{ form.description }} {{ form.description.errors }}
+            </div>
           </div>
         </div>
       </div>
