--- a/main/core/theme/mb/templates/pages/category-detail.html
+++ b/main/core/theme/mb/templates/pages/category-detail.html
@@ -58,6 +58,15 @@
       </div>
     </div>
   </section>
+
+  <div class="category-detail__text">
+    <div class="category-detail__container">
+      <div class="text">
+        {{category.description|safe}}
+      </div>
+    </div>
+  </div>
+
   <section class="index-contact">
     <div class="index-contact__container">
       <div class="index-contact__grid">
