--- a/main/core/theme/mb/templates/pages/gallery.html
+++ b/main/core/theme/mb/templates/pages/gallery.html
@@ -73,15 +73,15 @@
       </div>
     </div>
   </section>
-  {% if gallery.description %}
-  <div class="category-detail__text">
-    <div class="category-detail__container">
-      <div class="text">
-        {{gallery.description|safe}}
-      </div>
-    </div>
-  </div>
-  {% endif %}
+<!--  {% if gallery.description %}-->
+<!--  <div class="category-detail__text">-->
+<!--    <div class="category-detail__container">-->
+<!--      <div class="text">-->
+<!--        {{gallery.description|safe}}-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  {% endif %}-->
   {% include "../includes/contact-block.html" %}
   {% include "../components/map.html" %}
 </main>
