--- a/#src/templates/theme/pages/about.html
+++ b/#src/templates/theme/pages/about.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block description %}
 Компания Акрополь является одним из лидеров изготовления и продажи изделий из натурального гранита в Томской области.
-Основанная в 2010 году, компания уже более 10 лет успешно работает на внутреннем рынке России.
+Основанная в 1989 году, компания уже много лет успешно работает на внутреннем рынке России.
 {% endblock %}
 {% block keywords %}
 наши работы, портфолио памятников на могилу, фотографии памятников на могилу
@@ -33,7 +33,7 @@
         <p class="hero__subtitle">
           Компания “Акрополь” является одним из лидеров изготовления и продажи изделий из
           натурального гранита в Томской области.
-          Основанная в 2010 году, компания уже более 10 лет успешно работает на внутреннем рынке
+          Основанная в 1989 году, компания уже много лет успешно работает на внутреннем рынке
           России.
         </p>
         <div class="hero__buttons">
@@ -102,7 +102,7 @@
               </p>
               <p>
                 У нас вы найдете широкий выбор дизайнов и материалов для памятников любой сложности.
-                Доверьте создание памятника профессионалам с опытом более 10 лет.
+                Доверьте создание памятника профессионалам с многолетним опытом.
               </p>
               <p><i>Сохраните достойную память о близких и любимых в граните - выбирайте компанию "Акрополь"!</i></p>
             </div>
