--- a/main/core/theme/mb/templates/pages/about.html
+++ b/main/core/theme/mb/templates/pages/about.html
@@ -7,7 +7,7 @@
 Основанная в 1989 году, компания уже много лет успешно работает на внутреннем рынке России.
 {% endblock %}
 {% block keywords %}
-наши работы, портфолио памятников на могилу, фотографии памятников на могилу
+наши работы, портфолио памятников на могилу, фотогрsource афии памятников на могилу
 {% endblock %}
 {% block content %}
 <main class="page">
