--- a/#src/templates/theme/pages/about.html
+++ b/#src/templates/theme/pages/about.html
@@ -33,7 +33,7 @@
         <p class="hero__subtitle">
           Компания “Акрополь” является одним из лидеров изготовления и продажи изделий из
           натурального гранита в Томской области.
-          Основанная в 1989 году, компания уже много лет успешно работает на внутреннем рынке
+          Основанная в 1989 году, компания уже более 30-ти лет успешно работает на внутреннем рынке
           России.
         </p>
         <div class="hero__buttons">
