--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -250,18 +250,29 @@
   // .header-under__logo
 
   &__logo {
-    width: 106px;
-    height: 110px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     img {
-      width: 100%;
-      height: 100%;
+      width: 106px;
+      height: 110px;
       object-fit: cover;
+
+      @media screen and (max-width: 425px) {
+        width: 80px;
+        height: 80px;
+      }
     }
 
-    @media screen and (max-width: 425px) {
-      width: 80px;
-      height: 80px;
+    span {
+      font-weight: 600;
+      white-space: nowrap;
+      color: #4ebffe;
+
+      @media screen and (max-width: 425px) {
+        font-size: 10px;
+      }
     }
   }
 
