--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -322,6 +322,18 @@ html.lock body::before {
   justify-content: center;
 }
 
+.top-main__logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.top-main__logo span {
+  color: #4ebffe;
+  font-weight: 600;
+  white-space: nowrap;
+}
+
 .top-main__right {
   display: flex;
   flex-direction: column;
@@ -1461,14 +1473,21 @@ html.lock body::before {
 }
 
 .header-under__logo {
-  width: 106px;
-  height: 110px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header-under__logo img {
-  width: 100%;
-  height: 100%;
+  width: 106px;
+  height: 110px;
   object-fit: cover;
+}
+
+.header-under__logo span {
+  font-weight: 600;
+  white-space: nowrap;
+  color: #4ebffe;
 }
 
 .header-under__address-title {
@@ -4841,6 +4860,10 @@ body::after {
     width: 86px;
     height: 86px;
   }
+
+  .top-main__logo span {
+    font-size: 14px;
+  }
 }
 
 @media screen and (max-width: 620px) {
@@ -4943,6 +4966,10 @@ body::after {
   .top-main__logo img {
     width: 56px;
     height: 56px;
+  }
+
+  .top-main__logo span {
+    font-size: 10px;
   }
 }
 
@@ -5050,9 +5077,13 @@ body::after {
     border: none;
   }
 
-  .header-under__logo {
+  .header-under__logo img {
     width: 80px;
     height: 80px;
+  }
+
+  .header-under__logo span {
+    font-size: 10px;
   }
 
   .header-under__action {
