--- a/main/core/theme/mb/templates/components/header-single.html
+++ b/main/core/theme/mb/templates/components/header-single.html
@@ -5,6 +5,7 @@
       <a href="/" class="header-under__logo">
         <img src="{% static 'theme/mb/images/logo.png' %}" alt="Мемориальные услуги в Томске"
           title="Мемориальные услуги в Томске" />
+        <span>Основан в 1989 г.</span>
       </a>
       <div class="header-under__address">
         <p class="header-under__address-title">Адрес:</p>
