--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -34,6 +34,7 @@
         <div class="top-main__middle">
           <a href="/" class="top-main__logo">
             <img src="{% static 'theme/mb/images/logo.png' %}" alt="Логотип" title="Логотип"/>
+            <span>Основан в 1989 г.</span>
           </a>
         </div>
         <div class="top-main__right">
