--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -268,7 +268,7 @@
     span {
       font-weight: 600;
       white-space: nowrap;
-      color: #4ebffe;
+      color: #23bdf2;
 
       @media screen and (max-width: 425px) {
         font-size: 10px;
